timetoggle: add rest route to access all captures and add a rest report that sums up todays work spent on projects
